      including many standard headers (again, only with this compiler).
- Added several functions forward compatible with wxWidgets 3.0 (troelsk):
  wxDC::SetDeviceClippingRegion(), wxShowEvent::IsShown(),
  wxIconizeEvent::IsIconized(), wxFileName::StripExtension(),
  wxXmlNode::GetAttribute[s](), wxXmlNode::AddAttribute().

All (GUI):

- Add wxBU_EXACTFIT support to wxToggleButton XRC handler (Ronny Krueger).
- wxRTC: fixed AltGr+key input and numeric keypad Delete on Windows.
- wxRTC: added background colour setting to font dialog.
- wxRTC: added wxRICHTEXT_HANDLER_USE_CSS flag for HTML handler to use CSS
  where possible.
- wxRTC: corrected centring and right-justification spacing.
- Paper size conversion from dimensions to id now uses definition ordering
  in order to use common types where there are duplications, fixing problems
  where invalid sizes caused incorrect second invocation of page setup
  dialog.
- Corrected writing direction for Farsi.
- Added wxBORDER_THEME to XRC.

wxMSW:

- Fixed crash when copying Unicode URLs to the clipboard (Tim Kosse).
- Fixed generation of wxEVT_CHAR_HOOK events.
- Implement wxFileName::SetTimes() for directories (Steve Lamerton).
- Correct wxTopLevelWindow::SetShape() for windows with menu bar (Peter Friis).
- Backported speed-up of Vaclav Slavik's high quality print preview speed-up.
  You now need to set wxUSE_HIGH_QUALITY_PREVIEW_IN_WXMSW in
  src/common/prntbase.cpp and wxUSE_ENH_METAFILE_FROM_DC in
  include/wx/msw/enhmeta.h.
- Worked around child window and caret positioning bug (in Windows) when using
  wxBORDER_THEME in a container window.
- Suppressed spurious character event for decimal key in numeric keypad.
  

wxMac:

- Fixed a problem with wxListCtrl whereby event processing would change
  the event object identifier, and thereby affect subsequent processing,
  and defeat custom event propagation of commands from current focus window.
- Fixed a problem with wxFontDialog on Mac OS 10.6.

2.8.10:
-------
